# piper

./: .gitignore  Cargo.toml  build_and_put_to_netcup.sh  cmd  genarchpkg.rb
client/: Cargo.toml
client/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs  pipe.rs  tar_hash.rs  tar_password.rs
common/src/crypto/: mod.rs  reader.rs  writer.rs
server/: Cargo.toml  config.toml  genarchpkg.rb
server/src/: config.rs  main.rs  meta.rs  responses.rs  tar_hash.rs  tar_password.rs  util.rs
server/src/routes/: auth.rs  unauth.rs
server/src/templates/: mod.rs
server/static/: main.css  main.js
server/templates/: tar_index.html
src/: main.rs  meta.rs  responses.rs  tar_hash.rs  tar_id.rs  util.rs
src/bip39/: gen.py  mod.rs
src/routes/: auth.rs  download.rs  mod.rs  unauth.rs  upload.rs
src/templates/: mod.rs
templates/: tar_index.html
toc/: Cargo.toml
toc/src/: config.rs  main.rs
