[workspace]

members = [
    "server",
    "toc",
    "common",
]


[profile.dev.package.scrypt]
opt-level = 3


[profile.release]
codegen-units = 1
opt-level = 2
lto = true
strip = "debuginfo"

[patch.crates-io]
# patched to not use Chunked Tranfer Encoding for large bodies.
tiny_http = { path = "./tiny-http" }