[workspace]

members = [
    "server",
    "toc",
    "common",
]


[profile.dev.package.rust-argon2]
opt-level = 2

[profile.release]
codegen-units = 1
opt-level = 2
lto = true
strip = "debuginfo"

[patch.crates-io]
# patched to not use Chunked Tranfer Encoding for large bodies.
tiny_http = { path = "./tiny-http" }