[workspace]

members = [
    "server",
    "toc",
    "common",
]


[profile.dev.package.rust-argon2]
opt-level = 2

[profile.release]
codegen-units = 1
opt-level = 2
lto = true
strip = "debuginfo"

[patch.crates-io]
# patched to not use Chunked Tranfer Encoding for large bodies.
tiny_http = { git = "https://github.com/CodeSteak/tiny-http", branch = "feature/v0.8.2-http-1.0-no-chunked-convert" }