[package]
name = "tarcloud"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rouille = "3.5.0"
age = "0.8"
tar = "0.4"
anyhow = "1.0"
common = { path = "../common" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
streaming-zip ={ version = "0.5.0"}
chrono = "0.4"
toml = "0.5"
askama = "0.10"
