[package]
name = "toc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.9", features = ["derive"] }
toml = "0.5"
common = { path = "../common" }
tar = "0.4"
anyhow = "1.0.65"
serde = {version = "1.0.145", features = ["derive"]}
dirs = "4.0.0"
ureq = "2.5.0"
